<resources>
    <string name="app_name">To Do List App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Cad Tarefa -->
    <string name="Cad_Tarefa_Title">Digite Título da Tarefa</string>
    <string name="Cad_Tarefa_Descricao">Informe a Descricao</string>
    <string name="Cad_Tarefa_DataP">Insira a Data Prevista</string>
    <string name="Cad_Tarefa_SeleData">Selecione a Data</string>
    <string name="Cad_Tarefa_Salvar">Salvar</string>

    <!--adapter Tarefa -->
    <string name="title_ada_tare">Nome da Lista</string>
    <string name="data_prevista_adapter_tarefa">Data Prevista</string>
    <string name="status_adapter_tarefa">Status</string>

    <!-- detalhes da tarefa -->
    <string name="title_do_deta">Nome da Lista</string>
    <string name="data_prevista_deta_tarefa">Data Prevista</string>
    <string name="status_deta">Status</string>

    <!-- subtarefa-->
    <string name="cad_subTarefa_Title">Digite a Descrição</string>
    <string name="foto_subTarefa">Tire uma foto</string>

    <!-- menu -->
    <string name="salvar_menu">Salvar</string>
    <string name="origem_imagem">Qual a origem da imagem?</string>
    <string name="camera">Camera</string>
    <string name="galeria">Galeria</string>
</resources>