<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.DetalheTarefaFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/title_detalhe"
        android:layout_width="410dp"
        android:layout_height="96dp"
        android:background="@color/brown_300"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/recycler_detalhe"
        >

        <TextView
            android:id="@+id/tv_title_detalhe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_do_deta"
            android:textColor="@color/black"
            android:textSize="20dp"

            />

        <TextView
            android:id="@+id/tv_data_prevista_detalhe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_prevista_deta_tarefa"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tv_status_detalhe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/status_deta"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20dp"

            />

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        app:layout_constraintTop_toBottomOf="@id/title_detalhe"
        android:id="@+id/recycler_detalhe"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"

        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="96dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bt_novo_detalhe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Secondary_500"
        android:src="@android:drawable/ic_input_add"

        tools:layout_editor_absoluteX="354dp"
        tools:layout_editor_absoluteY="678dp" />
</androidx.constraintlayout.widget.ConstraintLayout>